# trustdidweb-py

./: .gitignore  LICENSE  README.md  anoncreds-context.json  demo.py  did-context.json  pyproject.toml  requirements.txt  sample-creddef.json  sample-schema.json  setup.cfg
.github/workflows/: publish-pypi.yml  unit-tests.yml
did_history/: __init__.py  date_utils.py  did.py  did_url.py  format.py  hash_utils.py  key.py  loader.py  multi_key.py  resolver.py  scid.py  state.py
did_history/tests/: test_history_resolver.py  test_key.py  test_state.py
did_tdw/: __init__.py  const.py  did.py  domain_path.py  history.py  proof.py  provision.py  resolver.py  update.py
python/: manage.py  requirements.txt
sample-anoncreds/: anoncreds-context.json  creddef:tag:1pmrg65tfojwgc6kjmqrduite.json  creddef:tag:1pmrg65tfojwgc6kjmqrduite.vc  revreg:tag:snyz6nkajsz3kmmittnjwv7l.json  revregdef:tag:snyz6nkajsz3kmmittnjwv7l.json  revregdef:tag:snyz6nkajsz3kmmittnjwv7l.vc  revstatus:tag:snyz6nkajsz3kmmittnjwv7l:latest.vc  schema:verified-person:1.0.0:pmrgc5duojhgc3lfomrduwzc.json  schema:verified-person:1.0.0:pmrgc5duojhgc3lfomrduwzc.vc
sample-diddoc/: did-configuration.json  did-v0.json  did-v1.json  did-v2-QmajdUtoUJ3SKghBWP55aYqJMPNwtUCsbUAL8D427Z8zSK.json  did-v2.json  did-v3-QmXNM5MXVnC1RZdMtFDPFY3NgBn44W9iQWxJN1uRbZ5p3f.json  did-v3.json  did-z4EBG9j3fuTaGBJVE2obQ1qPqnWaWfyHewyazLiti34LSa5HxQW.json  did-z4EBG9jCJvoFmP149yeEksPTFw1khE7gqv3tcVmS11iP6sxPFgN.json  did-z4EBG9jFEekPT1xfBWJnf431rajwt54KmM6iZTsF6V6n8bvXqSa.json  did.json  did.jsonl  keys.sqlite
tests/: test_compat.py
(+20 files in other folders)
